# StudentDatabase

./: CMakeLists.txt  README.md  icon.rc  main.cpp
consoleGUI/: buttons.cpp  buttons.h  objectInteraction.h
src/: Database.cpp  Database.h  Student.cpp  Student.h  Utils.cpp  Utils.h  global.cpp  global.h
src/Menu/: AddFileMenu.cpp  AddFileMenu.h  CreateFileMenu.cpp  CreateFileMenu.h  EditMenu.cpp  EditMenu.h  FileSorterMenu.cpp  FileSorterMenu.h  IndividTaskMenu.cpp  IndividTaskMenu.h  MainMenu.cpp  MainMenu.h  RemoveMenu.cpp  RemoveMenu.h  SortMenu.cpp  SortMenu.h  ViewFileMenu.cpp  ViewFileMenu.h
src/Widgets/: EditBox.cpp  EditBox.h  FileSlider.cpp  FileSlider.h  ScrollableTextBox.cpp  ScrollableTextBox.h
